# S02-26-E45-Data_Science_EquineLead

./: .env  .gitignore  .pre-commit-config.yaml  02_Segmentacion_Equina.ipynb  Dockerfile  Makefile  README.md  README_semana1.md  README_semana2.md  capture_dash.py  cf_session.json  chart_test.py  check_bundle.pyuv  check_data.py  debug_mlflow.py  debug_mlflow2.py  docker-compose.yml  doversaddlery_products_listing_limpio.parquet  download_models.py  entrypoint.sh  equinenow_horses_listings_limpio.parquet  events.txt  horsedeals_horses_listings.ipynb  horsedeals_horses_listings_limpio.parquet  horses_listings_limpio.parquet  load_test.py  products_listing_limpio .parquet  project_config.toml  pyproject.toml  recomendaciones_usuarios_semana2.parquet  recommendation_artifacts_v1.joblib  requirements.txt  results.txt  run_experiments.py  test.py  test_app.py
.devcontainer/: devcontainer.json
.dvc/: config
.dvc/tmp/: lock
.github/workflows/: ci.yml
Data_Analyst_Project/: 1_Valor_Mercado_y_Problema.md  2_KPIs_y_ROI.md  3_Presentacion_Ejecutiva.md  app.py  dashboard.py  generate_roi_charts.py  requirements.txt  validate_data.py
Data_Analyst_Project/components/: __init__.py  charts.py  ui_cards.py
Data_Analyst_Project/modules/: ai_subsystem.py  executive_summary.py
Data_Analyst_Project/pages/: 1_Market_Overview.py  2_Data_Validation.py  3_ML_Platform.py  3_ROI_Simulator.py  4_Executive_Summary.py  4_Experimentation.py  5_ROI_Simulator.py
Data_Analyst_Project/utils/: data_loader.py  style_utils.py
app/: README.md  app.py  requirements.txt
app/components/: charts.py  sidebar_filters.py  ui_cards.py
app/modules/: ai_subsystem.py  audience_analytics.py  conversion_analytics.py  executive_summary.py  horse_analytics.py  retail_analytics.py
app/utils/: data_loader.py  style_utils.py
data/: .gitignore  README.md  clean.dvc  production.dvc  raw.dvc
data/clean/: dataset_name.parquet  equinenow_horses_listings_limpio.parquet  horses_listings_limpio.parquet  products_listing_limpio.parquet
data/raw/: doversaddlery_products_listing.parquet  equinenow_horses_listings.parquet  horsedeals_horses_listings.parquet
data/tracking/: equestrian_jobs.txt  locale.txt
deployment/: Dockerfile.api  Dockerfile.data_pipeline  cloudbuild.yaml  docker-compose.yml
deployment/entrypoints/: data_pipeline.sh
docker/entrypoints/: data_pipeline.sh
docs/: LeadScoring_Documentacion.md  PipelineInferenciaCascada.html  README_MOTOR_RECOMENDACION.md  README_semana1.md  README_semana2.md  business_insights_report.md  data-description.md  deploy_app.md  how-can-i-use-MLFlow-Tracking-Experiment-on-Dagshub.md  how-to-download-with-DVC.md  how-to-use-DVC.md  lead-scoring.MD
infra/terraform/: main.tf  providers.tf  terraform.tfvars  variables.tf
notebooks/: 02_Segmentacion_Equina.ipynb  03_Motor_Recomendacion.ipynb  doversaddlery_products_listing.ipynb  equinenow_horses_listings.ipynb
src/api/: api_docs.py  main.py  schemas.py  test_serve.py  utils.py
src/cleaning/: doversaddlery_cleaner.py  doversaddlery_products_listing.ipynb  equinenow_cleaner.py
src/flows/: equinelead_pipeline.py
src/misc/: config.py  utils.py
src/mlflow/: config.py
src/monitoring/: config.py  data_loader.py  flow.py  logger.py  netlify_deploy.py  preprocess_horse.py  slack_alerts.py
src/notebooks/: LeadScoring.ipynb  LeadScoring_v2.ipynb
src/registry/: clear_model_stages.py  download_production_models.py  promote_to_production.py  register_models.py
testing/: data_test.py
(+75 files in other folders)
