[project]
name = "s02-26-e45-data-science-equinelead"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "mlflow",
    "pandas<3.0.0",
    "pyarrow<22.0.0",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
    "prefect==2.20.18",
    "prefect-docker",
    "prefect-gcp",
    "playwright>=1.58.0",
    "matplotlib>=3.10.8",
    "scipy>=1.17.0",
    "faker>=40.4.0",
    "pycountry>=24.6.1",
    "babel>=2.18.0",
    "seaborn>=0.13.2",
    "scikit-learn>=1.8.0",
    "imblearn>=0.0",
    "xgboost>=3.2.0",
    "dagshub>=0.6.8",
    "mlflow>=3.0.0",
    "lightgbm",
    "catboost",
    "optuna",
    "optuna-integration",
    "category-encoders>=2.9.0",
]

[dependency-groups]
dev = [
    "google-cloud-storage>=3.9.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.3",
    "notebook>=7.5.3",
]
