[project]
name = "equine-ds-project"
version = "0.1.0"
description = "Proyecto de Ciencia de Datos para leads ecuestres"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=2.2",
    "pyarrow>=20",
    "fastparquet>=2025.12.0",
    "numpy>=2.2.6",
    "requests>=2.32.5",
    "protobuf==4.25.3",
    "setuptools>=80.10.2",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
    "cloudpickle>=3.1.2",
    "python-dotenv>=1.2.2",
]

[tool.uv]
managed = true

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py311"
exclude = [
    "src/cleaning/notebooks",
    "src/notebooks",
    "**/*.ipynb"
]

[tool.ruff.lint]
select = ["E", "F", "I"]  # Errores, Pyflakes, isort

[dependency-groups]
dev = [
    "google-cloud-storage>=3.9.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.3",
    "notebook>=7.5.3",
    "ruff>=0.15.4",
]

flows = [
    "prefect==2.20.18",
    "prefect-docker",
    "prefect-gcp",
]

scrap = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "tqdm>=4.67.3",
    "pycountry>=24.6.1",
    "babel>=2.18.0",
    "faker>=40.4.0",
    "playwright>=1.58.0",
]

api = [
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
]

ml = [
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "lightgbm>=4.6.0",
    "catboost>=1.2.10",
    "category-encoders>=2.9.0",
]

ml_platform = [
    "dagshub>=0.6.5",
    "mlflow>=3.5.1",
    "dvc[gs]>=3.66.1",
]

monitoring = [
    "evidently>=0.4.36",
    "netlify-python>=0.4.0",
]

app = [
    "streamlit>=1.54.0",
    "plotly>=6.6.0"
]
